fix alignment of the last line

--- a/htdocs/t/about/about.css
+++ b/htdocs/t/about/about.css
@@ -79,3 +79,4 @@
 
 #partner-list { width: 590px; text-align: justify;}
 #partner-list .partner-item {display:inline-block; width: 150px; margin: 30px 0 15px; text-align: center;}
+#partner-list .spacer { display:inline-block; width: 500px; }
